examples/insurance-uc-demo-app/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: ingress
spec:
  rules:
  - host: insurance-uc-demo-app.ingress.k8s
    http:
      paths:
      - path: /*
        backend:
          serviceName: insurance-uc-demo-app
          servicePort: 5000
